Clean up `get_robust_subgraph_from_randomizations`

--- a/example/example.ipynb
+++ b/example/example.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "sys.path.append(\"../src/\")\n",
     "from graph import Graph\n",
-    "from graph import get_robust_subgraph_from_randomizations_smartly"
+    "from graph import get_robust_subgraph_from_randomizations"
    ]
   },
   {
@@ -74,10 +74,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "02:12:05 - OI2: INFO - Duplicated gene symbols in the prize file (we'll keep the max prize):\n",
-      "02:12:05 - OI2: INFO - []\n",
-      "02:12:05 - OI2: INFO - Members of the prize file not present in the interactome:\n",
-      "02:12:05 - OI2: INFO - ['CALM1', 'DCAF1', 'DUX4', 'EPYC', 'FN3K', 'G6PC3', 'GPC6', 'GXYLT2', 'HIST1H3A', 'HIST2H3A', 'LEFTY2', 'NBPF7', 'NDNF', 'TKFC']\n"
+      "04:02:11 - OI2: INFO - Duplicated gene symbols in the prize file (we'll keep the max prize):\n",
+      "04:02:11 - OI2: INFO - []\n",
+      "04:02:11 - OI2: INFO - Members of the prize file not present in the interactome:\n",
+      "04:02:11 - OI2: INFO - ['CALM1', 'DCAF1', 'DUX4', 'EPYC', 'FN3K', 'G6PC3', 'GPC6', 'GXYLT2', 'HIST1H3A', 'HIST2H3A', 'LEFTY2', 'NBPF7', 'NDNF', 'TKFC']\n"
      ]
     }
    ],
@@ -297,12 +297,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for paramstring, forests in results.items(): \n",
-    "    forests[\"robust\"] = get_robust_subgraph_from_randomizations_smartly(forests[\"augmented_forest\"], 400, 5)"
+    "# for paramstring, forests in results.items(): \n",
+    "#     forests[\"robust\"] = get_robust_subgraph_from_randomizations(forests[\"augmented_forest\"], 400, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "robust_networks = { param:get_robust_subgraph_from_randomizations(forests[\"augmented_forest\"], 400, 5) for param,forests in results.items() }"
    ]
   },
   {
@@ -324,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -370,60 +379,60 @@
        "      <td>0.50</td>\n",
        "      <td>1.00</td>\n",
        "      <td>3.00</td>\n",
-       "      <td>396</td>\n",
+       "      <td>399</td>\n",
        "      <td>0.23</td>\n",
-       "      <td>0.643611</td>\n",
+       "      <td>0.640501</td>\n",
        "      <td>0.75</td>\n",
-       "      <td>0.116490</td>\n",
-       "      <td>5.470752</td>\n",
-       "      <td>1.926229</td>\n",
-       "      <td>0.494237</td>\n",
-       "      <td>0.374944</td>\n",
+       "      <td>0.116416</td>\n",
+       "      <td>5.478399</td>\n",
+       "      <td>1.921619</td>\n",
+       "      <td>0.496250</td>\n",
+       "      <td>0.377878</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>W_0.50_B_1.00_G_4.00</th>\n",
        "      <td>0.50</td>\n",
        "      <td>1.00</td>\n",
        "      <td>4.00</td>\n",
-       "      <td>210</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>0.472810</td>\n",
+       "      <td>400</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.289325</td>\n",
        "      <td>0.14</td>\n",
-       "      <td>0.028810</td>\n",
-       "      <td>5.143791</td>\n",
-       "      <td>1.291409</td>\n",
-       "      <td>0.528180</td>\n",
-       "      <td>0.527977</td>\n",
+       "      <td>0.025250</td>\n",
+       "      <td>5.013172</td>\n",
+       "      <td>1.416217</td>\n",
+       "      <td>0.461917</td>\n",
+       "      <td>0.711123</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>W_0.50_B_2.00_G_3.00</th>\n",
        "      <td>0.50</td>\n",
        "      <td>2.00</td>\n",
        "      <td>3.00</td>\n",
-       "      <td>376</td>\n",
-       "      <td>0.77</td>\n",
-       "      <td>0.968590</td>\n",
+       "      <td>400</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>0.955300</td>\n",
        "      <td>0.98</td>\n",
-       "      <td>0.116356</td>\n",
-       "      <td>4.775321</td>\n",
-       "      <td>1.915185</td>\n",
-       "      <td>0.369688</td>\n",
-       "      <td>0.120521</td>\n",
+       "      <td>0.123550</td>\n",
+       "      <td>4.832091</td>\n",
+       "      <td>1.920192</td>\n",
+       "      <td>0.380968</td>\n",
+       "      <td>0.131388</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>W_0.50_B_2.00_G_4.00</th>\n",
        "      <td>0.50</td>\n",
        "      <td>2.00</td>\n",
        "      <td>4.00</td>\n",
-       "      <td>346</td>\n",
-       "      <td>0.33</td>\n",
-       "      <td>0.831387</td>\n",
+       "      <td>399</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>0.774687</td>\n",
        "      <td>0.38</td>\n",
-       "      <td>0.068844</td>\n",
-       "      <td>4.932215</td>\n",
-       "      <td>1.464722</td>\n",
-       "      <td>0.449968</td>\n",
-       "      <td>0.182126</td>\n",
+       "      <td>0.068145</td>\n",
+       "      <td>4.928508</td>\n",
+       "      <td>1.436792</td>\n",
+       "      <td>0.451981</td>\n",
+       "      <td>0.235393</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>W_1.00_B_1.00_G_3.00</th>\n",
@@ -445,45 +454,45 @@
        "      <td>1.00</td>\n",
        "      <td>1.00</td>\n",
        "      <td>4.00</td>\n",
-       "      <td>221</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>0.473122</td>\n",
+       "      <td>400</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>0.285750</td>\n",
        "      <td>0.14</td>\n",
-       "      <td>0.027738</td>\n",
-       "      <td>5.155019</td>\n",
-       "      <td>1.354072</td>\n",
-       "      <td>0.517721</td>\n",
-       "      <td>0.527607</td>\n",
+       "      <td>0.024025</td>\n",
+       "      <td>5.017132</td>\n",
+       "      <td>1.430268</td>\n",
+       "      <td>0.466917</td>\n",
+       "      <td>0.714654</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>W_1.00_B_2.00_G_3.00</th>\n",
        "      <td>1.00</td>\n",
        "      <td>2.00</td>\n",
        "      <td>3.00</td>\n",
-       "      <td>387</td>\n",
-       "      <td>0.77</td>\n",
-       "      <td>0.967829</td>\n",
+       "      <td>400</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>0.961525</td>\n",
        "      <td>1.00</td>\n",
-       "      <td>0.117700</td>\n",
-       "      <td>4.727407</td>\n",
-       "      <td>1.982946</td>\n",
-       "      <td>0.365311</td>\n",
-       "      <td>0.122018</td>\n",
+       "      <td>0.123000</td>\n",
+       "      <td>4.765686</td>\n",
+       "      <td>1.975827</td>\n",
+       "      <td>0.373468</td>\n",
+       "      <td>0.128877</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>W_1.00_B_2.00_G_4.00</th>\n",
        "      <td>1.00</td>\n",
        "      <td>2.00</td>\n",
        "      <td>4.00</td>\n",
-       "      <td>388</td>\n",
-       "      <td>0.39</td>\n",
-       "      <td>0.841701</td>\n",
+       "      <td>400</td>\n",
+       "      <td>0.37</td>\n",
+       "      <td>0.828575</td>\n",
        "      <td>0.41</td>\n",
-       "      <td>0.071031</td>\n",
-       "      <td>4.800238</td>\n",
-       "      <td>1.758758</td>\n",
-       "      <td>0.395736</td>\n",
-       "      <td>0.173505</td>\n",
+       "      <td>0.070325</td>\n",
+       "      <td>4.794332</td>\n",
+       "      <td>1.755181</td>\n",
+       "      <td>0.392439</td>\n",
+       "      <td>0.185289</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -491,59 +500,45 @@
       ],
       "text/plain": [
        "                         W     B     G  size  min_robustness  mean_robustness  \\\n",
-       "W_0.50_B_1.00_G_3.00  0.50  1.00  3.00   396            0.23         0.643611   \n",
-       "W_0.50_B_1.00_G_4.00  0.50  1.00  4.00   210            0.10         0.472810   \n",
-       "W_0.50_B_2.00_G_3.00  0.50  2.00  3.00   376            0.77         0.968590   \n",
-       "W_0.50_B_2.00_G_4.00  0.50  2.00  4.00   346            0.33         0.831387   \n",
+       "W_0.50_B_1.00_G_3.00  0.50  1.00  3.00   399            0.23         0.640501   \n",
+       "W_0.50_B_1.00_G_4.00  0.50  1.00  4.00   400            0.02         0.289325   \n",
+       "W_0.50_B_2.00_G_3.00  0.50  2.00  3.00   400            0.69         0.955300   \n",
+       "W_0.50_B_2.00_G_4.00  0.50  2.00  4.00   399            0.24         0.774687   \n",
        "W_1.00_B_1.00_G_3.00  1.00  1.00  3.00   400            0.23         0.638000   \n",
-       "W_1.00_B_1.00_G_4.00  1.00  1.00  4.00   221            0.10         0.473122   \n",
-       "W_1.00_B_2.00_G_3.00  1.00  2.00  3.00   387            0.77         0.967829   \n",
-       "W_1.00_B_2.00_G_4.00  1.00  2.00  4.00   388            0.39         0.841701   \n",
+       "W_1.00_B_1.00_G_4.00  1.00  1.00  4.00   400            0.03         0.285750   \n",
+       "W_1.00_B_2.00_G_3.00  1.00  2.00  3.00   400            0.74         0.961525   \n",
+       "W_1.00_B_2.00_G_4.00  1.00  2.00  4.00   400            0.37         0.828575   \n",
        "\n",
        "                      max_specificity  mean_specificity  mean_log_degree  \\\n",
-       "W_0.50_B_1.00_G_3.00             0.75          0.116490         5.470752   \n",
-       "W_0.50_B_1.00_G_4.00             0.14          0.028810         5.143791   \n",
-       "W_0.50_B_2.00_G_3.00             0.98          0.116356         4.775321   \n",
-       "W_0.50_B_2.00_G_4.00             0.38          0.068844         4.932215   \n",
+       "W_0.50_B_1.00_G_3.00             0.75          0.116416         5.478399   \n",
+       "W_0.50_B_1.00_G_4.00             0.14          0.025250         5.013172   \n",
+       "W_0.50_B_2.00_G_3.00             0.98          0.123550         4.832091   \n",
+       "W_0.50_B_2.00_G_4.00             0.38          0.068145         4.928508   \n",
        "W_1.00_B_1.00_G_3.00             0.75          0.117800         5.502732   \n",
-       "W_1.00_B_1.00_G_4.00             0.14          0.027738         5.155019   \n",
-       "W_1.00_B_2.00_G_3.00             1.00          0.117700         4.727407   \n",
-       "W_1.00_B_2.00_G_4.00             0.41          0.071031         4.800238   \n",
+       "W_1.00_B_1.00_G_4.00             0.14          0.024025         5.017132   \n",
+       "W_1.00_B_2.00_G_3.00             1.00          0.123000         4.765686   \n",
+       "W_1.00_B_2.00_G_4.00             0.41          0.070325         4.794332   \n",
        "\n",
        "                      std_log_degree  KS_statistic  euclidean_distance  \n",
-       "W_0.50_B_1.00_G_3.00        1.926229      0.494237            0.374944  \n",
-       "W_0.50_B_1.00_G_4.00        1.291409      0.528180            0.527977  \n",
-       "W_0.50_B_2.00_G_3.00        1.915185      0.369688            0.120521  \n",
-       "W_0.50_B_2.00_G_4.00        1.464722      0.449968            0.182126  \n",
+       "W_0.50_B_1.00_G_3.00        1.921619      0.496250            0.377878  \n",
+       "W_0.50_B_1.00_G_4.00        1.416217      0.461917            0.711123  \n",
+       "W_0.50_B_2.00_G_3.00        1.920192      0.380968            0.131388  \n",
+       "W_0.50_B_2.00_G_4.00        1.436792      0.451981            0.235393  \n",
        "W_1.00_B_1.00_G_3.00        1.909796      0.501914            0.380685  \n",
-       "W_1.00_B_1.00_G_4.00        1.354072      0.517721            0.527607  \n",
-       "W_1.00_B_2.00_G_3.00        1.982946      0.365311            0.122018  \n",
-       "W_1.00_B_2.00_G_4.00        1.758758      0.395736            0.173505  "
+       "W_1.00_B_1.00_G_4.00        1.430268      0.466917            0.714654  \n",
+       "W_1.00_B_2.00_G_3.00        1.975827      0.373468            0.128877  \n",
+       "W_1.00_B_2.00_G_4.00        1.755181      0.392439            0.185289  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "robust_summary = graph.generate_basic_statistics(results)\n",
+    "robust_summary = graph.generate_basic_statistics(robust_networks)\n",
     "robust_summary"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
